--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: HAIR-SALON SHELIMA BLOG
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+府中のヘアサロン　シェリマ
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: rogoimage2.png
