--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: HAIR-SALON SHELIMA 
+name: SHELIMA 
 
 # Short bio or description (displayed in the header)
- 府中のヘアサロン　シェリマ
+ 府中のヘアサロン　
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: rogoimage2.png
