--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name:shelima
  府中のヘアサロン　
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: rogoimage2.png
+avatar: rogoimage2.pn
 
 #
 # Flags below are optional
