--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: HAIR SALON SHELIMA
 
 # Short bio or description (displayed in the header)
- 府中のヘアサロン　
+description:  府中のヘアサロン　
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: rogoimage2.png
