--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: HAIR SALON SHELIMA
+name: ####### HAIR SALON SHELIMA
 
 # Short bio or description (displayed in the header)
 description:  府中のヘアサロン　
