--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # This file contains configuration flags to customize your site
 #
 
-####### Name of your site (displayed in the header)
+###### Name of your site (displayed in the header)
 name:  HAIR SALON SHELIMA
 
 # Short bio or description (displayed in the header)
